updates to react app

--- a/react_app/catalogo/src/componentes/cabecalho.module.css
+++ b/react_app/catalogo/src/componentes/cabecalho.module.css
@@ -2,5 +2,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(105, 100, 100);
+    background-color: rgb(53, 49, 49);
+    height: 80px;
+    
+    & h1{
+        color: white;
+        font-size: 32px;
+    }
 }
