--- a/react_app/catalogo/src/componentes/Card.module.css
+++ b/react_app/catalogo/src/componentes/Card.module.css
@@ -1,22 +1,21 @@
 .conteiner{
     position: relative;
-    width: 300px;
-    height: 600px;
-    overflow: hidden;
+    width: 100%;
+    height: auto;
     border-radius: 5px;
     transition: transform 0.3s ease;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
-    gap: 50px;
     color: white;
+    padding: 1rem;
 
 
     & img{
-        height: 280px;
-        width: 280px;
-        object-fit: contain;
+        height: 600px;
+        width: 450px;
+        object-fit: cover;
+        padding: 10px;
         padding: 10px;
     }
 }
