--- a/react_app/catalogo/src/componentes/Conteudo.module.css
+++ b/react_app/catalogo/src/componentes/Conteudo.module.css
@@ -2,11 +2,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #3f3e3e;
+    background-color: #141313;
     height: 100%;
     width: 100%;
 }
 
 h1{
-    color:aqua;
+    color:rgb(255, 255, 255);
 }
