--- a/react_app/catalogo/src/componentes/Lista.module.css
+++ b/react_app/catalogo/src/componentes/Lista.module.css
@@ -1,15 +1,14 @@
 .conteiner{
-    display: grid;
-    grid-template-columns: 300px 300px 300px;
+    display: flex;
     width: 100%;
-    height: auto;
-    padding: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    height: 100%;
+    padding: 1rem;
+
+
 }
 .posters{
     display: grid;
-    grid-template-columns: 300px 300px 300px;
+    grid-template-columns: auto auto auto auto;
+    width: 100%;
+    justify-content: center;
 }
