--- a/react_app/catalogo/src/componentes/navbar.module.css
+++ b/react_app/catalogo/src/componentes/navbar.module.css
@@ -4,7 +4,6 @@
     align-items: center;
     background-color: #181818;
     padding: 5px;
-    color: aqua;
     height: 80px;
 
 }
@@ -19,6 +18,6 @@ ul{
 
 li{
     margin-left: 30px;
-    color: aqua;
+    color: rgb(255, 255, 255);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
